@@ -3,6 +3,9 @@ TODO
 * add tests
 * add borlandc5 and codegear files
 
+20120425
+* fixes for pkg-config detection of libraries
+
 20120408
 * updated dependencies
 
